@@ -1,3 +1,5 @@
+07-Oct-2015 Removed verbatim optional argument to Bam.Core.TokenizedString.Create. Use CreateVerbatim instead.
+
 07-Oct-2015 Added Bam.Core.TokenizedString.CreateVerbatim utility function, for strings that require no parsing.
 
 07-Oct-2015 Fixes #25. Nested function calls in TokenizedStrings are now supported.
